@@ -16,37 +16,6 @@ ACE_Log_Record::~ACE_Log_Record (void)
     delete [] this->msg_data_;
 }
 
-ACE_INLINE void
-ACE_Log_Record::encode (void)
-{
-  ACE_TRACE ("ACE_Log_Record::encode");
-  this->length_ = ACE_HTONL (this->length_);
-  this->type_ = ACE_HTONL (this->type_);
-  // Make sure we don't enclose the sec() and usec() fields until
-  // they've been normalized.
-  // secs_ is commented out because it can be 64 bits. This method is
-  // deprecated; use the CDR operations instead.
-  //  this->secs_ = ACE_HTONL (this->secs_);
-  this->usecs_ = ACE_HTONL (this->usecs_);
-  this->pid_ = ACE_HTONL (this->pid_);
-}
-
-ACE_INLINE void
-ACE_Log_Record::decode (void)
-{
-  ACE_TRACE ("ACE_Log_Record::decode");
-#if !defined (ACE_LACKS_NTOHL)
-  ACE_Time_Value tv (this->secs_,
-                     ntohl (this->usecs_));
-
-  this->secs_ = tv.sec ();
-  this->usecs_ = tv.usec ();
-  this->type_ = ntohl (this->type_);
-  this->pid_ = ntohl (this->pid_);
-  this->length_ = ntohl (this->length_);
-#endif /* ACE_LACKS_NTOHL */
-}
-
 ACE_INLINE ACE_UINT32
 ACE_Log_Record::type (void) const
 {
